[gd_scene load_steps=2 format=3 uid="uid://c7h6bsmkrhro"]

[ext_resource type="Script" path="res://scenes/UI/promote_ui.gd" id="1_d6gls"]

[node name="Promote UI" type="Control"]
process_mode = 3
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d6gls")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 160.0
theme_override_constants/separation = 0

[node name="Queen" type="Button" parent="VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_icon = true

[node name="Rook" type="Button" parent="VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_icon = true

[node name="Bishop" type="Button" parent="VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_icon = true

[node name="Knight" type="Button" parent="VBox"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_icon = true

[connection signal="pressed" from="VBox/Queen" to="." method="_on_queen_pressed"]
[connection signal="pressed" from="VBox/Rook" to="." method="_on_rook_pressed"]
[connection signal="pressed" from="VBox/Bishop" to="." method="_on_bishop_pressed"]
[connection signal="pressed" from="VBox/Knight" to="." method="_on_knight_pressed"]
